# BlackHole

./: .gitignore  BlackHole.cpp  BlackHole.h  CMakeLists.txt  Drawer.cpp  Drawer.h  README.md  Vector2.h  main.cpp
Objects/: BlackHole.cpp  BlackHole.h  Photon.cpp  Photon.h
Utilities/: Vector2.cpp  Vector2.h
